@@ -11,19 +11,20 @@ import org.jakartaee5g23.sportsfieldbooking.entities.Category;
 import org.jakartaee5g23.sportsfieldbooking.mappers.CategoryMapper;
 import org.jakartaee5g23.sportsfieldbooking.services.CategoryService;
 import org.jakartaee5g23.sportsfieldbooking.dtos.responses.category.CategoryResponse;
-
+import org.jakartaee5g23.sportsfieldbooking.dtos.responses.other.PaginateResponse;
+import org.jakartaee5g23.sportsfieldbooking.dtos.responses.other.Pagination;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PostAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("${api.prefix}/category")
+@RequestMapping("${api.prefix}/categories")
 @RequiredArgsConstructor
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 @Slf4j
@@ -32,16 +33,66 @@ public class CategoryController {
     final CategoryService categoryService;
     final CategoryMapper categoryMapper;
 
-    @Operation(summary = "Get all categories", description = "Get all categories when user want to see all")
-    @GetMapping("/all")
-    public ResponseEntity<List<CategoryResponse>> findAll(
-            @RequestParam(defaultValue = "0") int offset,
-            @RequestParam(defaultValue = "10") int limit) {
-        Pageable pageable = PageRequest.of(offset, limit);
+    @Operation(summary = "Get all categories", description = "Get all categories when user wants to see all")
+    @GetMapping
+    public ResponseEntity<PaginateResponse<CategoryResponse>> findAll(
+            @RequestParam(defaultValue = "0") String offset,
+            @RequestParam(defaultValue = "10") String limit) {
+        int page = Integer.parseInt(offset);
+        int size = Integer.parseInt(limit);
+        Pageable pageable = PageRequest.of(page, size);
         Page<Category> categories = categoryService.findAll(pageable);
         List<CategoryResponse> categoryResponses = categories.stream()
                 .map(categoryMapper::toCategoryResponse)
-                .collect(Collectors.toList());
-        return ResponseEntity.status(HttpStatus.OK).body(categoryResponses);
+                .toList();
+
+        PaginateResponse<CategoryResponse> response = PaginateResponse.<CategoryResponse>builder()
+                .items(categoryResponses)
+                .pagination(new Pagination(page, size, categories.getTotalElements()))
+                .build();
+        return ResponseEntity.status(HttpStatus.OK).body(response);
+    }
+
+    @Operation(summary = "Add new category", description = "Add new category when admin wants to add new category")
+    @PostMapping
+    @PostAuthorize("(returnObject.body.createdBy == authentication.name and hasRole('FIELD_OWNER')) or hasRole('ADMIN')")
+    public ResponseEntity<CategoryResponse> create(@RequestBody Category category) {
+        return ResponseEntity.status(HttpStatus.OK)
+                .body(categoryMapper.toCategoryResponse(categoryService.create(category)));
+    }
+
+    @Operation(summary = "Update category", description = "Update category when admin wants to update category")
+    @PutMapping("/{id}")
+    @PostAuthorize("(returnObject.body.createdBy == authentication.name and hasRole('FIELD_OWNER')) or hasRole('ADMIN')")
+    public ResponseEntity<CategoryResponse> update(@PathVariable int id, @RequestBody Category category) {
+        return ResponseEntity.status(HttpStatus.OK)
+                .body(categoryMapper.toCategoryResponse(categoryService.update(id, category)));
+    }
+
+    @Operation(summary = "Delete category", description = "Delete category when admin wants to delete category")
+    @DeleteMapping("/{id}")
+    @PostAuthorize("(returnObject.body.createdBy == authentication.name and hasRole('FIELD_OWNER')) or hasRole('ADMIN')")
+    public ResponseEntity<Void> delete(@PathVariable int id) {
+        categoryService.delete(id);
+        return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
+    }
+
+    @Operation(summary = "Search category", description = "Search category by id or name")
+    @GetMapping("/search")
+    public ResponseEntity<PaginateResponse<CategoryResponse>> search(
+            @RequestParam(defaultValue = "") String keyword,
+            @RequestParam(defaultValue = "0") String offset,
+            @RequestParam(defaultValue = "100") String limit) {
+        Page<Category> categories = categoryService.searchCategories(keyword, Integer.parseInt(offset),
+                Integer.parseInt(limit));
+        List<CategoryResponse> categoryResponses = categories.stream()
+                .map(categoryMapper::toCategoryResponse)
+                .toList();
+        PaginateResponse<CategoryResponse> response = PaginateResponse.<CategoryResponse>builder()
+                .items(categoryResponses)
+                .pagination(new Pagination(Integer.parseInt(offset),
+                        Integer.parseInt(limit), categories.getTotalElements()))
+                .build();
+        return ResponseEntity.status(HttpStatus.OK).body(response);
     }
 }
